crates/smart-config/tests/ui/derives/option_in_option.rs
use smart_config::DescribeConfig;

#[derive(Debug, DescribeConfig)]
struct TestConfig {
    bogus: Option<Option<u64>>,
}

fn main() {}
